--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="assets/IMG/Favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/IMG/Favicon.png" type="image/x-icon">
     <!-- REMIX ICONS -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!-- MAIN CSS -->
+    <link rel="stylesheet" href="assets/ETX-routes/reusable-css.css">
     <link rel="stylesheet" href="assets/ETX-routes/style.css">
     <title>J&A residential company | Houston TX</title>
     <meta title="description" content="">
@@ -101,7 +102,7 @@
                 </ul>
 
                 <div class="gallery-buttons-container responsive-container">
-                    <a href="#" class="gallery-button left"><h4>Explore our gallery</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                    <a href="assets/pages/gallery.html" class="gallery-button left"><h4>Explore our gallery</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                     <a href="#services" class="gallery-button left-delayed"><h4>See out services</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                 </div>
 
