--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="assets/ETX-routes/reusable-css.css">
-    <link rel="stylesheet" href="assets/ETX-routes/style.css">
+    <link rel="stylesheet" href="assets/ETX-routes/css/reusable-css.css">
+    <link rel="stylesheet" href="assets/ETX-routes/css/style.css">
     <title>J&A residential company | Houston TX</title>
     <meta title="description" content="">
     <meta title="keywords" content="Home builders contractor Houston custom homes">
@@ -90,14 +90,14 @@
                 <h1 class="gallery-title section-title bottom">TRNASFORM YOUR HOME INTO SOMETHING <span>SPECTACULAR</span></h1>
 
                 <ul class="gallery-grid-list grid">
-                    <li class="gallery-grid-item g-i-1"><img src="assets/IMG/About-image-1.png" class="bottom" alt="About image one"></li>
-                    <li class="gallery-grid-item g-i-2"><img src="assets/IMG/Portfolio-image-1.png" class="left" alt="About image two"></li>
-                    <li class="gallery-grid-item g-i-3"><img src="assets/IMG/Portfolio-image-2.png" class="right" alt="About image three"></li>
-                    <li class="gallery-grid-item g-i-4"><img src="assets/IMG/About-image-4.png" class="top" alt="About image four"></li>
-                    <li class="gallery-grid-item g-i-5"><img src="assets/IMG/About-image-5.png" class="right" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-6"><img src="assets/IMG/About-image-6.png" class="bottom" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-7"><img src="assets/IMG/About-image-7.png" class="left" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-8"><img src="assets/IMG/About-image-8.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-two.png" class="bottom" alt="About image one"></li>
+                    <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-4"><img src="assets/IMG/gallery-six.png" class="top" alt="About image four"></li>
+                    <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-8"><img src="assets/IMG/gallery-11.png" class="right" alt="About image five"></li>
 
                 </ul>
 
@@ -194,64 +194,60 @@
                 <div class="swiper-wrapper">
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">2391 Noel St.</h4>
+                        <h4 class="portfolio-card-title">307 W 32nd</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-3.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-two.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">3842 Maple St.</h4>
+                        <h4 class="portfolio-card-title">528 W 31st</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-2.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-8.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">5217 Oak Lane</h4>
+                        <h4 class="portfolio-card-title">3762 Georgetown</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/About-image-4.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-15.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">7904 Evergreen Dr.</h4>
+                        <h4 class="portfolio-card-title">307 W 32nd</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-1.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-three.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">1683 Elmwood BLVD.</h4>
+                        <h4 class="portfolio-card-title">528 W 31st</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/About-image-1.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-12.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">2391 Noel St.</h4>
+                        <h4 class="portfolio-card-title">3762 Georgetown</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-3.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">3842 Maple St.</h4>
+                        <h4 class="portfolio-card-title">307 W 32nd</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-2.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-five.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">5217 Oak Lane</h4>
+                        <h4 class="portfolio-card-title">528 W 31st</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/About-image-4.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-9.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">7904 Evergreen Dr.</h4>
+                        <h4 class="portfolio-card-title">3762 Georgetown</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/Portfolio-image-1.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
-                    <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">1683 Elmwood BLVD.</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/About-image-1.png" alt="Portfolio image 1" class="portfolio-card-img">
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -263,8 +259,8 @@
 
                 <ul class="about-box-one grid">
                     <li class="a-i-1 about-list-item left"><h4>10 +</h4><p>Years of experiance</p></li>
-                    <li class="a-i-2 about-list-item right"><h4>500 +</h4><p>Completed projects</p></li>
-                    <li class="a-i-3 about-list-item bottom"><img class="about-img" src="assets/IMG/About-image-5.png" alt="About image"></li>
+                    <li class="a-i-2 about-list-item right"><h4>1000 +</h4><p>Completed projects</p></li>
+                    <li class="a-i-3 about-list-item bottom"><img class="about-img" src="assets/IMG/gallery-16.png" alt="About image"></li>
                 </ul>
 
                 <div class="about-box-two flex-column">
@@ -408,7 +404,9 @@
     <!-- SWIPER JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <!-- MAIN JS -->
-    <script src="assets/ETX-routes/main.js"></script>
+    <script src="assets/ETX-routes/javascript/header.js"></script>
+    <script src="assets/ETX-routes/javascript/reusable-js.js"></script>
+    <script src="assets/ETX-routes/javascript/main.js"></script>
     <!-- ========================================================== -->
 </body>
 </html>
