--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -77,6 +77,10 @@
 
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-one.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-two.png" alt="gallery image"></div>
+                <video class="image-card-video imgae-card-alt" autoplay muted loop playsinline>
+                    <source src="/assets/IMG/J&A Home video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-three.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-four.png" alt="image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-five.png" alt="gallery image"></div>
