--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <video class="home-background-video scale" id="home-video" autoplay muted loop playsinline>
-                <source src="assets/IMG/home-background-vid.mp4" type="video/mp4">
+                <source src="assets/IMG/J&A Home video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
