--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -89,10 +89,10 @@
                 </video>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-five.png" alt="gallery image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-six.png" alt="gallery image"></div>
-                <video class="image-card-video imgae-card-alt" autoplay muted loop playsinline>
+                <!-- <video class="image-card-video imgae-card-alt" autoplay muted loop playsinline>
                     <source src="/assets/IMG/gallery-vid-2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
-                </video>
+                </video> -->
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-8.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-9.png" alt="gallery image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-10.png" alt="image"></div>
