--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="assets/ETX-routes/css/reusable-css.css">
+    <link rel="stylesheet" href="assets/ETX-routes/css/reusable-css.css" as="style">
     <link rel="stylesheet" href="assets/ETX-routes/css/style.css">
     <title>J&A residential company | Houston TX</title>
     <meta title="description" content="">
