--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -78,19 +78,22 @@
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-20.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-21.png" alt="gallery image"></div>
                 <div class="image-card-video image-card-alt">
-                    <iframe src="https://player.vimeo.com/video/979481241?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/980101736?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-22.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-24.png" alt="image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-five.png" alt="gallery image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-six.png" alt="gallery image"></div>
                 <div class="image-card-video image-card-alt">
-                    <iframe src="https://player.vimeo.com/video/980101736?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/980120117?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-8.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-9.png" alt="gallery image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-10.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-11.png" alt="image"></div>
+                <div class="image-card-video image-card-alt">
+                    <iframe src="https://player.vimeo.com/video/980120170?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-12.png" alt="gallery image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-13.png" alt="gallery image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-14.png" alt="image"></div>
