--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -68,7 +68,7 @@
             </div>
 
 
-            <img src="/assets/IMG/gallery-one.png" alt="Gallery home background image" class="home-background-image scale" id="gallery-home-background">
+            <img src="/assets/IMG/gallery-background-image.png" alt="Gallery home background image" class="home-background-image scale" id="gallery-home-background">
         </section>
 
         <section class="images-gallery section" id="images-gallery">
@@ -87,7 +87,7 @@
                 <div class="image-card-video image-card-alt">
                     <iframe src="https://player.vimeo.com/video/980120117?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-8.png" alt="image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-8.webp" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-9.png" alt="gallery image"></div>
                 <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-10.png" alt="image"></div>
                 <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-11.png" alt="image"></div>
