--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="nav-list-item"><a href="#portfolio">OUR PORTFOLIO</a></li>
                 <li class="nav-list-item"><a href="#about">ABOUT US</a></li>
 
-                <li class="nav-list-item"><a href="#contact" class="nav-button">Contact Us</a></li>
+                <li class="nav-list-item"><a href="#contact" class="nav-button">CONTACT US</a></li>
 
 
             </ul>
@@ -94,7 +94,7 @@
                     <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-4"><img src="assets/IMG/gallery-six.png" class="top" alt="About image four"></li>
-                    <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.webp" class="right" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-8"><img src="assets/IMG/gallery-11.png" class="right" alt="About image five"></li>
@@ -202,7 +202,7 @@
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
                         <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-8.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/IMG/gallery-8.webp" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
@@ -271,7 +271,7 @@
                     </p>
 
                     <div class="about-buttons-container responsive-container">
-                        <a href="#" class="gallery-button left"><h4>Explore our gallery</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/gallery.html" class="gallery-button left"><h4>Explore our gallery</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <a href="#contact" class="gallery-button left-delayed"><h4>Get a quote</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                     </div>
                 </div>
