--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="gallery section" id="gallery">
 
             <div class="gallery-container container flex-column">
-                <h1 class="gallery-title section-title bottom">TRNASFORM YOUR HOME INTO SOMETHING <span>SPECTACULAR</span></h1>
+                <h1 class="gallery-title section-title bottom">TRANSFORM YOUR HOME INTO SOMETHING <span>SPECTACULAR</span></h1>
 
                 <ul class="gallery-grid-list grid">
                     <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-two.png" class="bottom" alt="About image one"></li>
@@ -195,19 +195,19 @@
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html/#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-two.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html/#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-8.webp" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html/#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-15.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
